--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,5 @@
 upstream uss_backends {
-  server unix:/srv/www/uss/run/gunicorn.sock fail_timeout=0;
+  server unix:/srv/sites/uss/run/gunicorn.sock fail_timeout=0;
 }
 
 server {
@@ -8,11 +8,11 @@ server {
 
     client_max_body_size 4G;
 
-    access_log /srv/www/logs/uss/nginx_access.log;
-    error_log /srv/www/logs/uss/nginx_error.log;
+    access_log /srv/logs/uss/nginx_access.log;
+    error_log /srv/logs/uss/nginx_error.log;
 
     location /static/ {
-        alias   /srv/www/uss/static/;
+        alias   /srv/sites/uss/static/;
     }
 
     location / {
@@ -28,6 +28,6 @@ server {
 
     error_page 500 502 503 504 /500.html;
     location = /500.html {
-        root /srv/www/uss/static/;
+        root /srv/sites/uss/static/;
     }
 }
